syntax = "proto3";
package api;

message KeystoreMigrationParam {
  string id = 1;
  string tcxId = 2;
  string password = 3;
  string derivedKey = 4;
}
